<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- ===== Display ===== -->
    <PreferenceCategory
        android:title="@string/section_display"
        android:layout="@layout/preference_category_custom" />

    <SwitchPreferenceCompat
        android:key="@string/pref_key_oled_mode"
        android:title="@string/pref_oled_title"
        android:summary="@string/pref_oled_summary"
        android:defaultValue="false" />

    <!--
        TODO (Phase 5): brightness slider + night auto-dim
        <SeekBarPreference
            android:key="@string/pref_key_brightness"
            android:title="@string/pref_brightness_title"
            android:summary="@string/pref_brightness_summary"
            android:max="100"
            android:defaultValue="80" />
    -->

    <!-- ===== Slideshow ===== -->
    <PreferenceCategory
        android:title="@string/section_slideshow"
        android:layout="@layout/preference_category_custom" />

    <SwitchPreferenceCompat
        android:key="@string/pref_key_slideshow_enabled"
        android:title="@string/pref_slideshow_title"
        android:summary="@string/pref_slideshow_summary"
        android:defaultValue="true" />

    <Preference
        android:key="pick_photos"
        android:title="@string/slideshow_pick_photos"
        android:summary="@string/slideshow_no_photos" />

    <ListPreference
        android:key="@string/pref_key_slideshow_interval"
        android:title="@string/slideshow_interval"
        android:entries="@array/slideshow_interval_labels"
        android:entryValues="@array/slideshow_interval_values"
        android:defaultValue="60000"
        android:dependency="@string/pref_key_slideshow_enabled" />

    <!-- ===== Widgets ===== -->
    <PreferenceCategory
        android:title="@string/section_widgets"
        android:layout="@layout/preference_category_custom" />

    <SwitchPreferenceCompat
        android:key="@string/pref_key_widgets_enabled"
        android:title="@string/pref_widgets_title"
        android:summary="@string/pref_widgets_summary"
        android:defaultValue="true" />

    <ListPreference
        android:key="@string/pref_key_widget_slot_count"
        android:title="@string/widget_slot_count"
        android:entries="@array/widget_slot_count_labels"
        android:entryValues="@array/widget_slot_count_values"
        android:defaultValue="1"
        android:dependency="@string/pref_key_widgets_enabled" />

    <Preference
        android:key="manage_slot_1"
        android:title="@string/widget_manage_slot"
        android:summary="@string/widget_pick_for_slot"
        android:dependency="@string/pref_key_widgets_enabled" />

    <Preference
        android:key="manage_slot_2"
        android:title="@string/widget_manage_slot"
        android:summary="@string/widget_pick_for_slot"
        android:dependency="@string/pref_key_widgets_enabled"
        android:visible="false" />

    <Preference
        android:key="manage_slot_3"
        android:title="@string/widget_manage_slot"
        android:summary="@string/widget_pick_for_slot"
        android:dependency="@string/pref_key_widgets_enabled"
        android:visible="false" />

    <!-- ===== About ===== -->
    <PreferenceCategory
        android:title="@string/section_about"
        android:layout="@layout/preference_category_custom" />

    <Preference
        android:key="about_license"
        android:title="@string/about_license"
        android:summary="@string/about_repo"
        android:selectable="false" />

</PreferenceScreen>